change structure and add api

--- a/index.html
+++ b/index.html
@@ -16,43 +16,41 @@
 
         <div class="container">
             <div class="header-row">
-                <div class="item-title head-title">You May Like</div>
+                <div class="item-title head-title">Other Contents You May Like</div>
                 <div class="disclosure">Sponsered by Taboola <img src="/assets/user.png" alt=""></div>
 
             </div>
             
-            <div class="widget-row">
+            <div class="widget">
                 <div class="item">
-                        <img class="thumbnail" src="https://www.medicalnewstoday.com/content/images/articles/326/326253/corgi-and-terrier-running.jpg" alt="">
-                        <div class="item-title">bla bla</div>
-                        <div class="item-title branding">by me</div>
+                        <img class="thumbnail" src="" alt="">
+                        <div class="item-title"></div>
+                        <div class="item-brand"></div>
                     </div>
                     <div class="item">
-                        <img class="thumbnail" src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="">
-                        <div class="item-title">bla bla</div>
-                        <div class="item-title branding">by me</div>
+                        <img class="thumbnail" src="" alt="">
+                        <div class="item-title"></div>
+                        <div class="item-brand"></div>
                     </div>
                     <div class="item">
-                        <img id="img_3" class="thumbnail" src="https://www.medicalnewstoday.com/content/images/articles/326/326253/corgi-and-terrier-running.jpg" alt="">
-                        <div class="item-title" for="img_3">bla bla</div>
-                        <div class="item-title branding">by me</div>
+                        <img id="img_3" class="thumbnail" src="" alt="">
+                        <div class="item-title" for="img_3"></div>
+                        <div class="item-brand"></div>
                 </div>
-            </div>
-            <div class="widget-row">
                     <div class="item">
-                        <img class="thumbnail" src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="">
-                        <div class="item-title">bla bla</div>
-                        <div class="item-title branding">by me</div>
+                        <img class="thumbnail" src="" alt="">
+                        <div class="item-title"></div>
+                        <div class="item-brand"></div>
                     </div>
                     <div class="item">
-                        <img class="thumbnail" src="https://www.medicalnewstoday.com/content/images/articles/326/326253/corgi-and-terrier-running.jpg" alt="">
-                        <div class="item-title">bla bla</div>
-                        <div class="item-title branding">by me</div>
+                        <img class="thumbnail" src="" alt="">
+                        <div class="item-title"></div>
+                        <div class="item-brand"></div>
                     </div>
                     <div class="item">
-                        <img class="thumbnail" src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="">
-                        <div class="item-title">bla bla</div>
-                        <div class="item-title branding">by me</div>
+                        <img class="thumbnail" src="" alt="">
+                        <div class="item-title"></div>
+                        <div class="item-brand"></div>
                     </div>
             </div>
         </div>
