add error handeling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="header-row">
                 <div class="item-title head-title">Other Contents You May Like</div>
-                <div class="disclosure">Sponsered by Taboola <img src="/assets/user.png" alt=""></div>
+                <div class="disclosure">Sponsered by Taboola</div>
 
             </div>
             
