--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+ <html> 
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,48 +13,12 @@
 
         <div class="container">
             <div class="header-row">
-                <div class="item-title head-title">Other Contents You May Like</div>
+                <div class="item-title head-title">Other Contents You May Also Like:</div>
                 <div class="disclosure">Sponsered by Taboola</div>
-
             </div>
-            
-            <div class="widget">
-                <div class="item">
-                        <img class="thumbnail" src="" alt="">
-                        <div class="item-title"></div>
-                        <div class="item-brand"></div>
-                    </div>
-                    <div class="item">
-                        <img class="thumbnail" src="" alt="">
-                        <div class="item-title"></div>
-                        <div class="item-brand"></div>
-                    </div>
-                    <div class="item">
-                        <img id="img_3" class="thumbnail" src="" alt="">
-                        <div class="item-title" for="img_3"></div>
-                        <div class="item-brand"></div>
-                </div>
-                    <div class="item">
-                        <img class="thumbnail" src="" alt="">
-                        <div class="item-title"></div>
-                        <div class="item-brand"></div>
-                    </div>
-                    <div class="item">
-                        <img class="thumbnail" src="" alt="">
-                        <div class="item-title"></div>
-                        <div class="item-brand"></div>
-                    </div>
-                    <div class="item">
-                        <img class="thumbnail" src="" alt="">
-                        <div class="item-title"></div>
-                        <div class="item-brand"></div>
-                    </div>
-            </div>
+            <div class="widget" dir="rtl"></div>
         </div>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
+
         <script src="./app.js" async defer></script>
     </body>
 </html>
