--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
         <div class="container">
             <div class="header-row">
-                <div class="item-title head-title">Other Contents You May Also Like:</div>
+                <div class="head-title">Other Contents You May Also Like:</div>
                 <div class="disclosure">Sponsered by Taboola</div>
             </div>
-            <div class="widget" dir="rtl"></div>
+            <div class="widget"></div>
         </div>
 
         <script src="./app.js" async defer></script>
